--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,7 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
-        <div class="container">
+        <div class="container-fluid">
             {% block menu %}{% endblock %}
             {% block body %}{% endblock %}
         </div>
