--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -2,12 +2,30 @@
 
 {% block title %}Hello!{% endblock %}
 
-{% block body %}
-    {% for article in articles %}
-        <article>
-            <h2>{{ article.title  }}</h2>
-            <img src="{{ asset('build/images/arbre.jpg') }}" alt="" class="img-fluid img-thumbnail" />
-            <p class="text-justify">{{ article.content }}</p>
-        </article>
-    {% endfor %}
+{% block header %}
+    La patisserie de Audrey
+{% endblock %}
+
+{% block footer %}
+    Liens
+{% endblock %}
+
+{% block content %}
+        {% for article in articles %}
+            <article>
+                <div class="row">
+                    <div class="col-12">
+                        <h1 class="h3">{{ article.title  }}</h1>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-4">
+                        <figure class="figure">
+                            <img src="{{ asset('build/images/arbre.jpg') }}" alt="Image de {{ article.title  }}" class="figure-img img-fluid img-thumbnail" />
+                        </figure>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-8">
+                        <p class="text-justify">{{ article.content }}</p>
+                    </div>
+                </div>
+            </article>
+        {% endfor %}
 {% endblock %}
